@@ -26,6 +26,13 @@ indexpage:
         - title: "Workload Migrate Solutions"
           url:
 #
+    - title: "Tools"
+      links:
+        - title: "FSx for ONTAP + VMC TCO Calculator"
+          url: https://cloud.netapp.com/vmc-aws-fsx-ontap/roi
+        - title: "FSx for ONTAP + VMC Simulator"
+          url: https://netapp-automation.github.io/FSx-VMC-Simulator
+#
     - title: "Additional Information"
       links:
         - title: "Region Support for NFS Datastores"
