@@ -4,6 +4,9 @@
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
 // tag::hmc[]
+| 09/14/2022 | Hybrid Cloud | Added links to TCO calculators and simulators for FSxN / VMC and ANF / AVS
+// end::hmc[]
+// tag::hmc[]
 | 09/14/2022 | Hybrid Cloud | Added supplemental NFS datastore option for AWS / VMC
 // end::hmc[]
 // tag::ent-db[]
